@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.3-beta9
-DOS2UNIX_VERSION_SHORT = 73b9
-DOS2UNIX_DATE = 2015-08-13
+DOS2UNIX_VERSION = 7.3-beta10
+DOS2UNIX_VERSION_SHORT = 73b10
+DOS2UNIX_DATE = 2015-08-15
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
